--- a/src/app/components/init/init.component.css
+++ b/src/app/components/init/init.component.css
@@ -3,6 +3,7 @@
     text-align: center;
     height: 3.125rem;
     font-size: 1.25rem;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .btn-ingresar {
@@ -15,4 +16,14 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+.link {
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+}
+
+.text {
+    color: white;
 }
