--- a/src/app/components/init/init.component.html
+++ b/src/app/components/init/init.component.html
@@ -1,5 +1,14 @@
 
 <div class="contenedor">
-    <input type="text" class="form-control mb-3 input-ingresar" placeholder="Pin del juego"/>
-    <button class="btn-ingresar">Ingresar</button>
+    <div *ngIf="error" class="alert alert-danger" role="alert">
+        <strong>Por favor ingrese  PIN</strong>
+      </div>
+    <input [(ngModel)]="pin" type="text" class="form-control mb-3 input-ingresar" placeholder="Pin del juego"/>
+    <button (click)="ingresar()" class="btn-ingresar btn-principal">Ingresar</button>
+</div>
+<div class="fixed-bottom">
+    <p class="text-center text">
+        Crea tu propio cuestionario GRATIS
+        <a class="link" href="#">aqui</a>
+    </p>
 </div>
