--- a/src/app/components/init/init.component.html
+++ b/src/app/components/init/init.component.html
@@ -9,6 +9,6 @@
 <div class="fixed-bottom">
     <p class="text-center text">
         Crea tu propio cuestionario GRATIS
-        <a class="link" href="#">aqui</a>
+        <a class="link" routerLink="/user">aqui</a>
     </p>
 </div>
