--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="text-center titulo">Login</h2>
+                    <form [formGroup]="loginForm" (ngSubmit)="login()">
+                        <div class="mb-3">
+                            <input formControlName="user" type="text" class="form-control form-control-lg" placeholder="Email"/>
+                        </div>
+                        <div class="mb-3">
+                            <input formControlName="pass" type="text" class="form-control form-control-lg" placeholder="Contraseña"/>
+                        </div>
+                        <button class="btn btn-secondary btn-lg" routerLink="/">Volver</button>
+                        <button type="submit"  class="btn btn-primary btn-lg float-end">Aceptar</button>
+                    </form>
+                    <br>
+                    <div class="text-center">
+                        <a href="#">Registrarse</a>
+                        <br>
+                        <a href="#">Recuperar contraseña</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
