--- a/src/app/components/user/recovery-pass/recovery-pass.component.html
+++ b/src/app/components/user/recovery-pass/recovery-pass.component.html
@@ -1,1 +1,24 @@
-<p>recovery-pass works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="text-center titulo">Recuperar Contraseña</h3>
+                    <form [formGroup]="recoveryForm" (ngSubmit)="recoveryPass()">
+                        <div class="mb-3">
+                            <input type="text" formControlName="user" class="form-control form-control-lg" placeholder="Introduzca su email...">
+                            <div class="text-danger" *ngIf="recoveryForm.get('user')?.hasError('required') && recoveryForm.get('user')?.touched">
+                                El email es <strong>obligatorio</strong>
+                            </div>
+                            <div class="text-danger" *ngIf="recoveryForm.get('user')?.hasError('email') && recoveryForm.get('user')?.touched">
+                                El email es <strong>inválido</strong>
+                            </div>
+                        </div>
+                        <button routerLink="/user" class="btn btn-secondary btn-lg">Volver</button>
+                        <button [disabled]="recoveryForm.invalid" type="submit" class="btn btn-primary btn-lg float-end">Aceptar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
