--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -1,1 +1,39 @@
-<p>register works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="text-cetner titulo">Registar Usuario</h3>
+                    <form [formGroup]="registerForm" (ngSubmit)="register()">
+                        <div class="mb-3">
+                            <input type="text" class="form-control form-control-lg" formControlName="user" placeholder="Email">
+                            <span class="text-danger" *ngIf="registerForm.get('user')?.getError('required') && registerForm.get('user')?.touched">
+                                El email es <strong>requerido</strong>
+                            </span>
+                            <span class="text-danger" *ngIf="registerForm.get('user')?.getError('email') && registerForm.get('user')?.touched">
+                                El email es <strong>inválido</strong>
+                            </span>
+                        </div>
+                        <div class="mb-3">
+                            <input type="password" class="form-control form-control-lg" formControlName="pass" placeholder="Contraseña">
+                            <span class="text-danger" *ngIf="registerForm.get('pass')?.getError('required') && registerForm.get('user')?.touched">
+                                La contraseña es <strong>requerida</strong>
+                            </span>
+                            <span class="text-danger" *ngIf="registerForm.get('pass')?.getError('minlength') && registerForm.get('user')?.touched">
+                                La contraseña debe tener <strong>mínimo 6 caracteres</strong>
+                            </span>
+                        </div>
+                        <div class="mb-3">
+                            <input type="password" class="form-control form-control-lg" formControlName="repeatPass" placeholder="Repetir Contraseña">
+                            <span class="text-danger" *ngIf="registerForm.hasError('notSame') && registerForm.get('repeatPass')?.touched">
+                                Las contraseñas <strong>deben coincidir</strong>
+                            </span>
+                        </div>
+                        <button routerLink="/user" class="btn btn-secondary btn-lg">Volver</button>
+                        <button type="submit" [disabled]="registerForm.invalid" class="btn btn-primary btn-lg float-end">Aceptar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
