--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -1,6 +1,9 @@
 <div class="container mt-5">
+    <div class="d-flex justify-content-center mt-5" *ngIf="loading" >
+        <app-spinner></app-spinner>
+    </div>
     <div class="row">
-        <div class="col-lg-6 offset-lg-3">
+        <div class="col-lg-6 offset-lg-3" *ngIf="!loading">
             <div class="card">
                 <div class="card-body">
                     <h3 class="text-cetner titulo">Registar Usuario</h3>
