--- a/src/app/components/user/verify-email/verify-email.component.html
+++ b/src/app/components/user/verify-email/verify-email.component.html
@@ -1,1 +1,7 @@
-<p>verify-email works!</p>
+<div class="card">
+    <div class="card-body text-center">
+        <h3>Revisar Correo</h3>
+        <h4>Te enviamos un correo electrónico para verificar su cuenta</h4>
+        <button routerLink="/user" class="btn btn-secondary btn-lg-3">Volver</button>
+    </div>
+</div>
