--- a/src/app/components/dashboard/create-questions/create-questions.component.html
+++ b/src/app/components/dashboard/create-questions/create-questions.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="showError" class="alert alert-danger text-center" role="alert">
+    POR FAVOR CUMPLIMENTE TODOS LOS CAMPOS 
+</div>
+
 <div class="container">
     <div class="row mt-3 mb-5">
         <div class="col-lg-8 offset-lg-2">
@@ -67,6 +71,8 @@
                     </div>
                 </div>
             </form>
+
+            <app-list-questions></app-list-questions>
         </div>
     </div>
 </div>
