--- a/src/app/components/init/init.component.html
+++ b/src/app/components/init/init.component.html
@@ -1,7 +1,10 @@
+<div class="contenedor" *ngIf="loading" >
+    <app-spinner></app-spinner>
+</div>
 
-<div class="contenedor">
+<div class="contenedor" *ngIf="!loading">
     <div *ngIf="error" class="alert alert-danger" role="alert">
-        <strong>Por favor ingrese  PIN</strong>
+        <strong>{{ this.errorText }}</strong>
       </div>
     <input [(ngModel)]="pin" type="text" class="form-control mb-3 input-ingresar" placeholder="Pin del juego"/>
     <button (click)="ingresar()" class="btn-ingresar btn-principal">Ingresar</button>
