--- a/src/app/components/play/do-quiz/do-quiz.component.html
+++ b/src/app/components/play/do-quiz/do-quiz.component.html
@@ -1,1 +1,18 @@
-<p>do-quiz works!</p>
+<div class="container mt-3">
+    <div class="d-flex justify-content-center mt-3">
+        <h1 class="titulo count-question">{{ getSeconds() }}</h1>
+    </div>
+    <div class="row mt-2">
+        <div class="text-center">
+            <h3 class="titulo">{{ getTitle() }}</h3>
+            <div class="col-lg-6 offset-lg-3">
+                <ul class="list-group mt-3">
+                    <li *ngFor="let response of getResponses()" 
+                        class="list-group-item animate__animated animate__fadeIn"
+                    >{{ response.description }}</li>
+                </ul>
+                <button class="btn-principal mt-3 btn-aceptar">ACEPTAR</button>
+            </div>
+        </div>
+    </div>
+</div>
