--- a/src/app/components/shared/user-response/user-response.component.html
+++ b/src/app/components/shared/user-response/user-response.component.html
@@ -1,1 +1,8 @@
-<p>user-response works!</p>
+<div *ngIf="loading" class="contenedor">
+    <app-spinner></app-spinner>
+</div>
+
+<div class="container" *ngIf="!loading">
+    works
+</div>
+
