--- a/src/app/components/shared/user-response/user-response.component.html
+++ b/src/app/components/shared/user-response/user-response.component.html
@@ -2,7 +2,66 @@
     <app-spinner></app-spinner>
 </div>
 
-<div class="container" *ngIf="!loading">
-    works
+<div class="container mt-5" *ngIf="!loading">
+    <div class="text-center animate__animated animate__backInDown">
+        <h1 class="titulo">RESUMEN</h1>
+        <div class="card">
+            <div class="card-body">
+                <div class="row mt-2">
+                    <div class="col-lg-6">
+                        <h3 class="titulo">NOMBRE: {{ userQuizResponse.name }}</h3>
+                    </div>
+                    <div class="col-lg-6">
+                        <h3 class="titulo">PUNTOS: {{ userQuizResponse.totalPoints }}</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-lg-4">
+                <div class="card text-white bg-dark">
+                    <div class="card-body">
+                        <h6 class="titulo">CANT. PREG: {{ userQuizResponse.questionQuantity }}</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card text-white bg-success">
+                    <div class="card-body">
+                        <h6 class="titulo">CORRECTAS: {{ userQuizResponse.correctQuantity }}</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card text-white bg-danger">
+                    <div class="card-body">
+                        <h6 class="titulo">INCORRECTAS: {{ userQuizResponse.incorrectQuantiy }}</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3" *ngFor="let question of userQuizResponse.userResponses">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="titulo">{{ question.title }}</h3>
+                        <ul class="list-group">
+                            <li *ngFor="let response of question.reponses; let i = index"
+                            class="list-group-item"
+                            [ngClass]="{ 'correct': response.isCorrect === true && question.indexResponse === i, 'incorrect': response.isCorrect === false && question.indexResponse === i }"
+                            >
+                                {{ response.description }}
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3 mb-3">
+            <div class="col-lg-6 offset-lg-3 text-center">
+                <button (click)="backReturn()" style="width: 100%; font-size: 28px;" class="btn-principal">VOLVER</button>
+            </div>
+        </div>
+    </div>
 </div>
 
