--- a/src/app/components/shared/user-response/user-response.component.html
+++ b/src/app/components/shared/user-response/user-response.component.html
@@ -21,21 +21,21 @@
             <div class="col-lg-4">
                 <div class="card text-white bg-dark">
                     <div class="card-body">
-                        <h6 class="titulo">CANT. PREG: {{ userQuizResponse.questionQuantity }}</h6>
+                        <h6 class="titulo">CANT. PREG: {{ userQuizResponse.questionQuantiy }}</h6>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="card text-white bg-success">
                     <div class="card-body">
-                        <h6 class="titulo">CORRECTAS: {{ userQuizResponse.correctQuantity }}</h6>
+                        <h6 class="titulo">CORRECTAS: {{ userQuizResponse.correctQuantiy }}</h6>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="card text-white bg-danger">
                     <div class="card-body">
-                        <h6 class="titulo">INCORRECTAS: {{ userQuizResponse.incorrectQuantiy }}</h6>
+                        <h6 class="titulo">INCORRECTAS: {{ userQuizResponse.inCorrectQuantity }}</h6>
                     </div>
                 </div>
             </div>
